# niko

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: constants.h  game-manager.h  game-object-intf.h  gui.h  input-manager.h  manager-intf.h  niko.h  scene.h  sounds.h  spritesheet-renderer.h  types.h
src/: game-manager.cpp  gui.cpp  input-manager.cpp  main.cpp  niko.cpp  scene.cpp  spritesheet-renderer.cpp
